tests/transpiler/x/rs/map_nested_assign.rs
// Generated by Mochi transpiler v0.10.31 on 2025-07-20 08:42 +0700
use std::collections::HashMap;
fn main() {
    let mut data: HashMap<&str, HashMap<&str, i64>> = HashMap::from([("outer", HashMap::from([("inner", 1)]))]);
    data[&"outer"]["inner"] = 2;
    println!("{}", data[&"outer"]["inner"]);
}
